--- a/app/src/main/res/layout/activity_players_setup.xml
+++ b/app/src/main/res/layout/activity_players_setup.xml
@@ -11,6 +11,7 @@
         android:gravity="center">
 
         <EditText
+            android:id="@+id/player_setup_name_hint"
             android:autofillHints=""
             android:inputType="text"
             android:layout_width="wrap_content"
@@ -20,6 +21,7 @@
         </EditText>
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/player_setup_add_player"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/player_setup_add_player">
@@ -35,6 +37,7 @@
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/player_setup_randomize_roles"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:text="@string/player_setup_randomize_roles">
