Corrected randomize role button in player setup activity

--- a/app/src/main/res/layout/activity_players_setup.xml
+++ b/app/src/main/res/layout/activity_players_setup.xml
@@ -38,8 +38,8 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/player_setup_randomize_roles"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/player_setup_randomize_roles">
 
     </com.google.android.material.button.MaterialButton>
