--- a/app/src/main/res/layout/activity_players_setup.xml
+++ b/app/src/main/res/layout/activity_players_setup.xml
@@ -11,7 +11,7 @@
         android:gravity="center">
 
         <EditText
-            android:id="@+id/player_setup_name_hint"
+            android:id="@+id/player_setup_name"
             android:autofillHints=""
             android:inputType="text"
             android:layout_width="wrap_content"
