Set of a ListView instead of a Spinner in gamemode selection activity

--- a/app/src/main/res/layout/activity_gamemode_selection.xml
+++ b/app/src/main/res/layout/activity_gamemode_selection.xml
@@ -5,11 +5,11 @@
     android:orientation="vertical"
     android:gravity="center">
 
-    <Spinner
-        android:id="@+id/gamemode_selection_spinner"
+    <ListView
+        android:id="@+id/gamemode_selection_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </Spinner>
+    </ListView>
 
 </LinearLayout>
