--- a/app/src/main/res/layout/activity_players_setup.xml
+++ b/app/src/main/res/layout/activity_players_setup.xml
@@ -26,20 +26,27 @@
 
         </Spinner>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/player_setup_drinker_checkbox">
+
+        </TextView>
+
         <CheckBox
             android:id="@+id/player_setup_drinker_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
         </CheckBox>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/player_setup_add_player"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/player_setup_add_player">
-        </com.google.android.material.button.MaterialButton>
     </LinearLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/player_setup_add_player"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/player_setup_add_player">
+    </com.google.android.material.button.MaterialButton>
 
     <ListView
         android:id="@+id/player_setup_player_list_view"
